tiny image changes

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,14 @@ body{
     padding: 2rem;
     flex-grow: 1;
 }
+
+@media  screen and (min-width: 1000px) {
+    .item-1{
+        display: flex;
+        justify-content: center;
+    }
+    .item-1 img{
+        width: 30rem;
+        object-fit: fill;
+    }
+}
