--- a/styles.css
+++ b/styles.css
@@ -2,45 +2,46 @@
     box-sizing: border-box;
 }
 body{
+    font-family: 'Roboto';
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     height: 100%;
-    background-image: url('male-business-executive-giving-speech_107420-63809.jpg');
+    background-image: url('modern-business-building-scenery-touching-sky.jpg');
 
 }.flex-container{
-    height: 100vh;
+    width: 60rem;
+    max-width: 80vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    
 }
-
 .item-1{
-    border: 2px solid blue;
-    height: 80%;
-    width: 100%;
-    background-color: rgba(10, 12, 17, 0.952);
+    background-color: rgba(255, 255, 255, 0.774);
+    border-radius: 20px;
+    padding: 2rem;
 }
-.item-1 img{
-    width: 100%;
-    height: 100%;
-    object-fit:contain;
+.item-1 h1, h2, p{
+    padding: 0.5rem 1rem 0 1rem;
 }
-.item-2{
-    width: 100%;
-    text-align: center;
-    color:white;
-    background-color: rgba(0, 0, 0, 0.81);
+a,a:active{
+    text-decoration: none;
+    color: white;
+}
+span{
+    color: rgb(22, 81, 218);
+}
+button{
     font-size: 1.5rem;
     padding: 2rem;
-    flex-grow: 1;
+    background: rgb(29, 117, 180);;
+    border: none;
+    width: 100%;
+    margin-top: 1rem;
 }
 
-@media  screen and (min-width: 1000px) {
-    .item-1{
-        display: flex;
-        justify-content: center;
-    }
-    .item-1 img{
-        width: 30rem;
-        object-fit: fill;
-    }
+div img{
+    margin-top: 1rem;
+    width: 100%;
 }
